crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__whitespace__I033-newline-consistency-the-first.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/whitespace/I033-newline-consistency-the-first
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "hello world\n" [Ended]
outcome: Ended
