crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__whitespace__I034-newline-consistency-the-second.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/whitespace/I034-newline-consistency-the-second
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "hello" (0) -> 0]
> "hello world\n" [Ended]
outcome: Ended
