crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__whitespace__I035-newline-consistency-the-third.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/whitespace/I035-newline-consistency-the-third
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [0] === PASS
> "" [Choices: "hello" (0) -> 0]
> "hello\n" [Continue]
> "world\n" [Ended]
outcome: Ended
