crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__whitespace__whitespace.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/whitespace/whitespace
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "Hello!\n" [Continue]
> "World.\n" [Ended]
outcome: Ended
